made an actual decent menu

--- a/products.html
+++ b/products.html
@@ -38,10 +38,94 @@
     </header>
     <main>
       <div class="menu-container">
-        <div class="menu-container-item"></div>
-        <div class="menu-container-item"></div>
-        <div class="menu-container-item"></div>
-        <div class="menu-container-item"></div>
+        <!--Meat Section-->
+        <h2 class="menu-title">Meats</h2>
+        <div class="menu-item">
+          <div class="item-name">Baby Back Ribs</div>
+          <div class="item-price">$12.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Belly</div>
+          <div class="item-price">$7.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Ground Pork</div>
+          <div class="item-price">$3.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Bacon</div>
+          <div class="item-price">$2.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Sausage</div>
+          <div class="item-price">$3.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Loin</div>
+          <div class="item-price">$3.75</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Fat</div>
+          <div class="item-price">$1.50</div>
+        </div>
+        <h2 class="menu-title">Deli Deals</h2>
+        <div class="menu-item">
+          <div class="item-name">Baby Back Ribs</div>
+          <div class="item-price">$12.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Belly</div>
+          <div class="item-price">$7.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Ground Pork</div>
+          <div class="item-price">$3.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Bacon</div>
+          <div class="item-price">$2.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Sausage</div>
+          <div class="item-price">$3.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Loin</div>
+          <div class="item-price">$3.75</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Fat</div>
+          <div class="item-price">$1.50</div>
+        </div>
+        <h2 class="menu-title">Snacks & Goods</h2>
+        <div class="menu-item">
+          <div class="item-name">Baby Back Ribs</div>
+          <div class="item-price">$12.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Belly</div>
+          <div class="item-price">$7.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Ground Pork</div>
+          <div class="item-price">$3.00</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Bacon</div>
+          <div class="item-price">$2.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Sausage</div>
+          <div class="item-price">$3.50</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Loin</div>
+          <div class="item-price">$3.75</div>
+        </div>
+        <div class="menu-item">
+          <div class="item-name">Pork Fat</div>
+          <div class="item-price">$1.50</div>
+        </div>
       </div>
     </main>
     <!--Footer-->
