deciding on what to do on the about page

--- a/products.html
+++ b/products.html
@@ -39,68 +39,70 @@
     <main>
       <div class="menu-container">
         <!--Meat Section-->
-        <h2 class="menu-title">Meats</h2>
+        <h2 class="menu-title">Meats (Raw)</h2>
         <div class="menu-item">
           <div class="item-name">Baby Back Ribs</div>
-          <div class="item-price">$12.00</div>
+          <div class="item-price">$12.00/lb</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Pork Belly</div>
-          <div class="item-price">$7.00</div>
+          <div class="item-price">$7.00/lb</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Ground Pork</div>
-          <div class="item-price">$3.00</div>
+          <div class="item-price">$3.00/lb</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Bacon</div>
-          <div class="item-price">$2.50</div>
+          <div class="item-price">$2.50/lb</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Sausage</div>
-          <div class="item-price">$3.50</div>
+          <div class="item-price">$3.50/lb</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Pork Loin</div>
-          <div class="item-price">$3.75</div>
+          <div class="item-price">$3.75/lb</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Pork Fat</div>
-          <div class="item-price">$1.50</div>
+          <div class="item-price">$1.50/lb</div>
         </div>
-        <h2 class="menu-title">Deli Deals</h2>
+        <!--Deli Section-->
+        <h2 class="menu-title">Deli Deals (Fully Cooked/Smoked)</h2>
         <div class="menu-item">
-          <div class="item-name">Baby Back Ribs</div>
-          <div class="item-price">$12.00</div>
-        </div>
-        <div class="menu-item">
-          <div class="item-name">Pork Belly</div>
-          <div class="item-price">$7.00</div>
+          <div class="item-name">Sliced Ham (Hickory Smoked, Brown Sugar Glazed, & More)</div>
+          <div class="item-price">$2.00/lb</div>
         </div>
         <div class="menu-item">
-          <div class="item-name">Ground Pork</div>
-          <div class="item-price">$3.00</div>
+          <div class="item-name">Whole Ham (Cooked)</div>
+          <div class="item-price">$7.00/lb</div>
         </div>
         <div class="menu-item">
-          <div class="item-name">Bacon</div>
-          <div class="item-price">$2.50</div>
+          <div class="item-name">Sausage (Regular, Sage, Maple, Breakfast)</div>
+          <div class="item-price">$3.00/lb</div>
         </div>
         <div class="menu-item">
-          <div class="item-name">Sausage</div>
-          <div class="item-price">$3.50</div>
+          <div class="item-name">Rendered Lard</div>
+          <div class="item-price">$2.75/lb</div>
         </div>
         <div class="menu-item">
-          <div class="item-name">Pork Loin</div>
-          <div class="item-price">$3.75</div>
+          <div class="item-name">Salami</div>
+          <div class="item-price">$3.75/lb</div>
         </div>
         <div class="menu-item">
-          <div class="item-name">Pork Fat</div>
-          <div class="item-price">$1.50</div>
+          <div class="item-name">Bacon (Cooked)</div>
+          <div class="item-price">$1.50/lb</div>
         </div>
+        <div class="menu-item">
+          <div class="item-name">Charcuterie (Mix & Match)</div>
+          <div class="item-price">$10.00</div>
+        </div>
+        <!--Snacks Section-->
         <h2 class="menu-title">Snacks & Goods</h2>
         <div class="menu-item">
-          <div class="item-name">Baby Back Ribs</div>
-          <div class="item-price">$12.00</div>
+          <div class="item-name">Bacon Jerky</div>
+          <div class="item-price">$15.00</div>
         </div>
         <div class="menu-item">
           <div class="item-name">Pork Belly</div>
