more responsive design

--- a/about.html
+++ b/about.html
@@ -17,31 +17,29 @@
 </head>
 <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" href="./index.html">Three Little Pigs</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="./index.html">Home</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="./products.html">Our Products</a>
-              </li>
-            <li class="nav-item">
-                <a class="nav-link" href="./about.html">About Us</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand" href="./index.html">Three Little Pigs</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./products.html">Our Products</a>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about.html">About Us</a>
+                </li>
+              </ul>
+            </div>
+        </nav>
     </header>
     <main>
-        <!-- <section class="about-hero">
-            <img src="./assets/img/grandpa.jpg" class="border-radius" alt="grandpa">
-            <p>It all started with grandpa...</p>
-        </section> -->
         <h2 class="header">About Us</h2>
         <section class="about-info">
             <div class="about-pictures">
@@ -57,7 +55,7 @@
                 From the farm, to your table, grandpa wants to make sure you get the best pork around. 
             </p>
         </section>
-        <div class="parallax"></div>
+        <div class="parallax-2"></div>
         <section class="about-values">
             <h2 class="header-alt">Our Values</h2>
             <p class="about-values-p">
