--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="./index.html">Three Little Pigs</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <img src="https://img.icons8.com/material-outlined/24/000000/menu--v1.png"/>
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
+                <div class="hamburger"></div>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
@@ -34,44 +36,13 @@
                 </li>
               </ul>
             </div>
-          </nav>
+        </nav>
     </header>
     <main>
         <!--Hero Image-->
-        <section class="hero-section">
-            <!-- <div class="hero-item">
-                <h2 class="hero-title">Oink, Oink!</h2>
-                <p>
-                    For over 25 years, we've had the best selection around!
-                    Our product comes from humane, sustainable farms that care about their animals.
-                    Stop in any time to look at what delicious options we have to offer.
-                    If you can't make it in, please feel free to look at our online catalog!
-                </p>
-                <button class="hero-btn"><a href="./products.html">Shop Our Products</a></button>
-            </div> -->
-        </section>
+        <section class="hero-section"></section>
 
         <!--About US-->
-        <!-- <section class="our-story">
-            <h3 class="section-title">Our Story</h3>
-            <div class="row">
-                <div class="column our-story-img"></div>
-                <div class="column border-radius our-story-column">
-                    <p>
-                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Integer erat dolor, commodo quis pellentesque sit amet, lacinia blandit est. 
-                        Donec pharetra vel nibh id condimentum. Aenean nec justo pretium eros congue egestas. 
-                        In varius dignissim urna id condimentum. Aliquam odio urna, molestie eget nisi at, dictum scelerisque ex.
-                        Duis at ipsum aliquam, bibendum nisl at, dictum dolor. 
-                        Ut consectetur arcu sit amet elit blandit vehicula. Cras id nisi ac elit molestie pulvinar.
-                    </p>
-                    <a href="#">Learn More About Us</a>
-                </div>
-            </div>
-        </section> -->
         <section class="our-story">
             <div class="hero-item">
                 <h2 class="hero-title">Oink, Oink!</h2>
@@ -93,9 +64,8 @@
             <h3 class="section-title">Contact Us</h3>
             <div class="row">
                 <div class="column border-radius">
-                    <!-- <h4>We value your feedback, recommendations, and support!</h4> -->
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <p>
+                    <p class="iframe-p">
                         123 S. East Street<br>
                         Moon, Universe 99000<br>
                         (000) 100-9000<br>
@@ -103,7 +73,7 @@
                     </p>
                 </div>
                 <div class="column border-radius">
-                    <h4>Got Questions?</h4>
+                    <h4 class="section-subtitle">Contact Us</h4>
                     <form action="./index.html">
                         <label for="name">Name:</label><br>
                         <input type="text" id="name" name="name"><br>
