disabled mobile parallax error

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </div>
         </section>
         <!--Paralax-->
-        <section class="parallax-2">
+        <section class="parallax">
             
         </section>
         <!--Map & Contact-->
