--- a/products.html
+++ b/products.html
@@ -40,6 +40,7 @@
     </header>
     <main>
       <div class="menu-container">
+        <h5>Please <a href="tel:000-000-0000">call us</a> to place an order.</h5>
         <!--Meat Section-->
         <h2 class="menu-title">Meats (Raw)</h2>
         <div class="menu-item">
