--- a/index.html
+++ b/index.html
@@ -1,100 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Schoolbell&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/media-queries.css">
-    <title>Three Little Pigs</title>
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-lg">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Baloo+2&family=Schoolbell&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="assets/css/style.css">
+        <link rel="stylesheet" href="assets/css/media-queries.css">
+        <title>Three Little Pigs</title>
+    </head>
+    <body>
+        <!--Navbar-->
+        <header>
+            <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="./index.html">Three Little Pigs</a>
+            <!--Hamburger Menu-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger"></div>
                 <div class="hamburger"></div>
                 <div class="hamburger"></div>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
-              <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="./products.html">Our Products</a>
-                  </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./about.html">About Us</a>
-                </li>
-              </ul>
+                <ul class="navbar-nav ml-auto">
+                <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
+                <li class="nav-item active"><a class="nav-link" href="./products.html">Our Products</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">About Us</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
-    <main>
-        <!--Hero Image-->
-        <section class="hero-section"></section>
-
-        <!--About US-->
-        <section class="our-story">
-            <div class="hero-item">
-                <h2 class="hero-title">Oink, Oink!</h2>
-                <p>
-                    For over 25 years, we've had the best selection around!
-                    Our product comes from humane, sustainable farms that care about their animals.
-                    Stop in any time to look at what delicious options we have to offer.
-                    If you can't make it in, please feel free to look at our online catalog!
-                </p>
-                <a class="hero-btn" a href="./products.html">Shop Our Products</a>
-            </div>
-        </section>
-        <!--Paralax-->
-        <section class="parallax">
-            
-        </section>
-        <!--Map & Contact-->
-        <section class="home-contact">
-            <h3 class="section-title">Contact Us</h3>
-            <div class="row">
-                <div class="column border-radius">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-                    <p class="iframe-p">
-                        123 S. East Street<br>
-                        Moon, Universe 99000<br>
-                        (000) 100-9000<br>
-                        info@threelittlepigs.com
+            </nav>
+        </header>
+        <main>
+            <!--Hero Image-->
+            <section class="hero-section"></section>
+            <!--About US-->
+            <section class="our-story">
+                <div class="hero-item">
+                    <h2 class="hero-title">Oink, Oink!</h2>
+                    <p>
+                        For over 25 years, we've had the best selection around!
+                        Our product comes from humane, sustainable farms that care about their animals.
+                        Stop in any time to look at what delicious options we have to offer.
+                        If you can't make it in, please feel free to look at our online catalog!
                     </p>
+                    <a class="hero-btn" a href="./products.html">Shop Our Products</a>
                 </div>
-                <div class="column border-radius">
-                    <h4 class="section-subtitle">Contact Us</h4>
-                    <form action="./index.html">
-                        <label for="name">Name:</label><br>
-                        <input type="text" id="name" name="name"><br>
-                        <label for="email">Email Address:</label><br>
-                        <input type="text" id="email" name="email"><br>
-                        <label for="message">Message:</label><br>
-                        <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                        <button type="submit">Submit</button>
-                    </form>
+            </section>
+            <!--Paralax-->
+            <section class="parallax"></section>
+            <!--Map & Contact-->
+            <section class="home-contact">
+                <h3 class="section-title">Contact Us</h3>
+                <div class="row">
+                    <div class="column border-radius">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        <p class="iframe-p">
+                            123 S. East Street<br>
+                            Moon, Universe 99000<br>
+                            (000) 100-9000<br>
+                            info@threelittlepigs.com
+                        </p>
+                    </div>
+                    <div class="column border-radius">
+                        <h4 class="section-subtitle">Contact Us</h4>
+                        <form action="./index.html">
+                            <label for="name">Name:</label><br>
+                            <input type="text" id="name" name="name"><br>
+                            <label for="email">Email Address:</label><br>
+                            <input type="text" id="email" name="email"><br>
+                            <label for="message">Message:</label><br>
+                            <textarea name="message" id="message" cols="30" rows="10"></textarea>
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
                 </div>
-            </div>
-        </section>
-    </main>
+            </section>
+        </main>
         <!--Footer-->
-    <footer>
-        <p>&copy; 2021 Walston</p>
-    </footer>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="assets/js/script.js"></script>
-</body>
-
+        <footer>
+            <p>&copy; 2021 Walston</p>
+        </footer>
+        <!--Scripts-->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="assets/js/script.js"></script>
+    </body>
 </html>
