--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="hero-item">
                     <h2 class="hero-title">Oink, Oink!</h2>
                     <p>
-                        For over 25 years, we've had the best selection around!
+                        For over 75 years, we've had the best selection around!
                         Our product comes from humane, sustainable farms that care about their animals.
                         Stop in any time to look at what delicious options we have to offer.
                         If you can't make it in, please feel free to look at our online catalog!
@@ -58,8 +58,8 @@
                     <div class="column border-radius">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.27988646703!2d-74.25986673512953!3d40.69767006847738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY!5e0!3m2!1sen!2sus!4v1634702654154!5m2!1sen!2sus" class="border-radius" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         <p class="iframe-p">
-                            123 S. East Street<br>
-                            Moon, Universe 99000<br>
+                            123 S. East Street, Moon, Universe 99000<br>
+                            Mon - Fri, 8am - 5pm <br> 
                             (000) 100-9000<br>
                             info@threelittlepigs.com
                         </p>
